# StaticTypeInfo

./: CMakeLists.txt  README.md  codecov.yaml
.github/workflows/: install.yml  standalone.yml  ubuntu.yml
include/: static_type_info.h
include/static_type_info/: hash.h  type_id.h  type_index.h  type_name.h
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: example.cpp  type_id.cpp  type_index.cpp  type_name.cpp
